# TraceAgent

./: .env.example  .gitignore  Agent.md  Makefile  README.md  conftest.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/examples/: requirements_agent_prompts.md
apps/api/examples/projects/: esp32_sensor_board.json  stm32_can_board.json  usb_c_uart_adapter.json
apps/api/migrations/: 0001_project_persistence.sql
apps/api/src/api/: audit.py  board_synthesis.py  db.py  git_snapshots.py  main.py  models.py  observability.py  part_catalog.py  part_resolver.py  placement_engine.py  placement_scoring.py  rate_limit.py  requirements_agent.py  retention.py  review_agent.py  schemas.py  schematic_synthesis.py  security.py  simulation.py  storage.py  visual_edits.py
apps/api/src/api/fixtures/: curated_catalog_v1.json
apps/api/src/api/prompts/: requirements_extraction.txt
apps/api/tests/: test_board_synthesis.py  test_e2e_flow.py  test_health.py  test_part_resolver.py  test_projects.py  test_requirements_agent.py  test_review_agent.py  test_schematic_synthesis.py  test_security.py  test_visual_edits_sync.py
apps/web/: Dockerfile  (+2 more)
apps/worker/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/worker/src/worker/: bom_generator.py  freerouting_job.py  main.py  release.py  reliability.py
apps/worker/tests/: test_bom_generator.py  test_freerouting_job.py  test_release.py  test_worker.py
docs/: ops.md
(+3 files in other folders)
