[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceagent-api"
version = "0.1.0"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.1",
  "traceagent-schemas",
  "traceagent-design-ir",
  "traceagent-llm",
  "traceagent-kicad",
  "traceagent-verification"
]

[tool.setuptools.packages.find]
where = ["src"]
