[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceagent-worker"
version = "0.1.0"
dependencies = [
  "redis==5.2.1",
  "traceagent-schemas",
  "traceagent-design-ir",
  "traceagent-llm",
  "traceagent-kicad",
  "traceagent-verification"
]

[tool.setuptools.packages.find]
where = ["src"]
